--- a/vignettes/article.Rnw
+++ b/vignettes/article.Rnw
@@ -168,22 +168,20 @@ Section~\ref{sec:conclusion}.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Background}\label{sec:background}
 \subsection{Empirical likelihood framework}\label{sec:2.1}
-We describe a general framework for EL formulation.
-Suppose we observe independent and identically distributed
-(i.i.d.)~\({p}\)-dimensional random variables \({X_1, \dots, X_n}\) from a
-distribution \({P}\).
-Consider a parameter \({\theta \equiv \theta(P)} \in {\Theta}\) and an
-estimating function \({g(X_i, \theta)}\) that takes its values in
-\({\mathbb{R}^p}\) and satisfies the following moment condition:
+We describe a general framework for EL formulation. Suppose we observe
+independent and identically distributed (i.i.d.)~\({p}\)-dimensional random
+variables \({X_1, \dots, X_n}\) from a distribution \({P}\). Consider a
+parameter \({\theta \equiv \theta(P)} \in {\Theta}\) and an estimating function
+\({g(X_i, \theta)}\) that takes its values in \({\mathbb{R}^p}\) and satisfies
+the following moment condition:
 %
 \begin{equation}\label{eq:moment}
 \E[g(X_i, \theta)] = 0,
 \end{equation}
 %
-where the expectation is taken with respect to \({P}\).
-Without further information on \({P}\), we restrict our attention to a family of
-multinomial distributions supported on the data.
-The nonparametric likelihood is given by
+where the expectation is taken with respect to \({P}\). Without further
+information on \({P}\), we restrict our attention to a family of multinomial
+distributions supported on the data. The nonparametric likelihood is given by
 %
 \begin{equation*}
 L(P) = \prod_{i = 1}^n P(\{X_i\}) = \prod_{i = 1}^n p_i,
@@ -201,31 +199,27 @@ R(\theta) = \max_{p_i}
 \end{equation}
 %
 with \({L(\theta)} = {\prod_{i = 1}^n p_i}\) denoting the corresponding EL
-function.
-Ties in the data do not affect the EL formulation both computationally and
-theoretically.
-We can assign probability weight \({p_i}\) to each observation as if there are
-no ties and still obtain the same EL ratio value \citep[Section
-2.3]{owen2001empirical}.
-The profiling removes all the nuisance parameters, the \({p_i}\)s attached to
-the data, yielding a \({p}\)-dimensional subfamily indexed by \({\theta}\).
-Note that the data determine the multinomial distributions; thus, the reduction
-to a subfamily does not correspond to a parametric model.
-See \citet{diciccio1990nonparametric} for a detailed discussion of how the
-reduction connects to the notion of least favorable families
-\citep{stein1956efficient}.
+function. Ties in the data do not affect the EL formulation both computationally
+and theoretically. We can assign probability weight \({p_i}\) to each
+observation as if there are no ties and still obtain the same EL ratio value
+\citep[Section 2.3]{owen2001empirical}. The profiling removes all the nuisance
+parameters, the \({p_i}\)s attached to the data, yielding a \({p}\)-dimensional
+subfamily indexed by \({\theta}\). Note that the data determine the multinomial
+distributions; thus, the reduction to a subfamily does not correspond to a
+parametric model. See \citet{diciccio1990nonparametric} for a detailed
+discussion of how the reduction connects to the notion of least favorable
+families \citep{stein1956efficient}.
 
 We maximize \(\prod_{i = 1}^n n p_i\), or equivalently \({\sum_{i = 1}^n \log(n
-p_i)}\), subject to the constraints in Equation~\ref{eq:problem}.
-Implicit within these constraints is a condition known as the
-``convex hull constraint'', stipulating that the convex hull of the points
-\(\{g(X_i, \theta)\}_{i = 1}^n\) must contain the zero vector.
-Failure to meet this constraint renders the problem infeasible, forcing
-some \(p_i\)s to be negative to satisfy the condition
-\({{\sum_{i = 1}^n p_i g(X_i, \theta)} = {0}}\).
-When the constraint is met, the problem admits a unique interior solution
-since the objective function is concave and the feasible set is convex.
-Using the method of Lagrange multipliers, we write
+p_i)}\), subject to the constraints in Equation~\ref{eq:problem}. Implicit
+within these constraints is a condition known as the ``convex hull constraint'',
+stipulating that the convex hull of the points \(\{g(X_i, \theta)\}_{i = 1}^n\)
+must contain the zero vector. Failure to meet this constraint renders the
+problem infeasible, forcing some \(p_i\)s to be negative to satisfy the
+condition \({{\sum_{i = 1}^n p_i g(X_i, \theta)} = {0}}\). When the constraint
+is met, the problem admits a unique interior solution since the objective
+function is concave and the feasible set is convex. Using the method of Lagrange
+multipliers, we write
 %
 \begin{equation*}
 \mathcal{L}(p_1, \dots, p_n, \lambda, \gamma) =
@@ -233,10 +227,9 @@ Using the method of Lagrange multipliers, we write
   \gamma \left(\sum_{i = 1}^n p_i - 1\right),
 \end{equation*}
 %
-where \(\lambda\) and \(\gamma\) are the multipliers.
-Differentiating \(\mathcal{L}\) with respect to its arguments and setting the
-derivatives to zero gives \(\gamma = -n\).
-Then the solution is given by
+where \(\lambda\) and \(\gamma\) are the multipliers. Differentiating
+\({\mathcal{L}}\) with respect to its arguments and setting the derivatives to
+zero gives \(\gamma = -n\). Then the solution is given by
 %
 \begin{equation}\label{eq:pi}
 p_i = \frac{1}{n}\frac{1}{1 + \lambda^\top g(X_i, \theta)},
@@ -250,9 +243,8 @@ where \({\lambda} \equiv {\lambda(\theta)}\) satisfies
 \end{equation}
 %
 Instead of solving the nonlinear Equation~\ref{eq:lambda}, we solve the dual
-problem with respect to \(\lambda\).
-Substituting the expression for \(p_i\) in Equation~\ref{eq:pi} into \({\sum_{i
-= 1}^n \log(n p_i)}\) gives
+problem with respect to \(\lambda\). Substituting the expression for \(p_i\) in
+Equation~\ref{eq:pi} into \({\sum_{i = 1}^n \log(n p_i)}\) gives
 %
 \begin{equation}\label{eq:max}
 \log \left(R(\theta)\right) = -\sum_{i = 1}^n \log\left(1 + \lambda^\top g(X_i,
@@ -262,9 +254,8 @@ Substituting the expression for \(p_i\) in Equation~\ref{eq:pi} into \({\sum_{i
 Now consider minimizing \(r(\lambda)\) subject to \({1 + \lambda^\top g(X_i,
 \theta)} \geq {1 / n}\) for \({i} = {1, \dots, n}\) with \({\theta}\) fixed.
 This is a convex optimization problem, where the constraints correspond to the
-condition that \({0 \leq p_i \leq 1}\) for all \(i\).
-Next, we remove the constraints by employing a pseudo logarithm function
-\citep{owen1990empirical}
+condition that \({0 \leq p_i \leq 1}\) for all \(i\). Next, we remove the
+constraints by employing a pseudo logarithm function \citep{owen1990empirical}
 %
 \begin{equation}\label{eq:plog}
 \log_\star(x) =
@@ -276,54 +267,48 @@ Next, we remove the constraints by employing a pseudo logarithm function
 %
 Minimizing \({r_\star(\lambda)} = {-\sum_{i = 1}^n\log_\star(1 + \lambda^\top
 g(X_i, \theta))}\) without the constraints does not affect the solution and the
-Newton-Raphson method can be applied to find it.
-If the convex hull constraint is violated, the algorithm does not converge with
-\({\Vert \lambda \Vert}\) increasing as the iteration proceeds.
-Hence, it can be computationally more efficient to minimize \(r_\star(\lambda)\)
-first to get \(\log(R(\theta))\) and indirectly check the convex hull constraint
-by observing \(\lambda\) and \(p_i\)s.
-Note that EL is maximized when \({\lambda} = {0}\) and \({p_i} = {1 / n}\) for
-all \(i\).
-It follows from Equation~\ref{eq:lambda} that \(\hat{\theta}\), the MELE, is
-obtained by solving the estimating equations \({\sum_{i = 1}^n g(X_i, \theta)} =
-{0}\).
-The existence, uniqueness, and asymptotic properties of \(\hat{\theta}\) are
-well established in the literature.
+Newton-Raphson method can be applied to find it. If the convex hull constraint
+is violated, the algorithm does not converge with \({\Vert \lambda \Vert}\)
+increasing as the iteration proceeds. Hence, it can be computationally more
+efficient to minimize \(r_\star(\lambda)\) first to get \(\log(R(\theta))\) and
+indirectly check the convex hull constraint by observing \(\lambda\) and
+\(p_i\)s. Note that EL is maximized when \({\lambda} = {0}\) and
+\({p_i} = {1 / n}\) for all \(i\). It follows from Equation~\ref{eq:lambda} that
+\(\hat{\theta}\), the MELE, is obtained by solving the estimating equations
+\({\sum_{i = 1}^n g(X_i, \theta)} = {0}\). The existence, uniqueness, and
+asymptotic properties of \(\hat{\theta}\) are well established in the
+literature.
 
 Assume that there exists a true parameter value \({\theta_0} \in {\Theta}\) that
 is the unique solution to the moment condition in Equation~\ref{eq:moment}.
 Similar to the parametric likelihood method, define minus twice the empirical
-log-likelihood ratio function as \({l(\theta)} = {-2\log(R(\theta))}\).
-Under regularity conditions, it is known that a nonparametric version of Wilks'
+log-likelihood ratio function as \({l(\theta)} = {-2\log(R(\theta))}\). Under
+regularity conditions, it is known that a nonparametric version of Wilks'
 theorem holds. That is, \({l(\theta_0)} \to_d {\chi^2_p}\ \textnormal{as}\ {n}
 \to {\infty}\), where \({\chi^2_p}\) is the chi-square distribution with \(p\)
-degrees of freedom.
-See, e.g.,~\citet{qin1994empirical} for proof and the treatment of more general
-cases, including the over-identified ones.
-For a level \({\alpha} \in {(0, 1)}\), let \({\chi^2_{p, \alpha}}\) be the
-\({100 (1 - \alpha)\%}\)th percentile of \({\chi^2_p}\).
-Since \({P(l(\theta_0) \leq \chi^2_{p, \alpha})} \to {1 - \alpha}\), an
-asymptotic \({100 (1 - \alpha)\%}\) confidence region for \({\theta}\) can be
-obtained as
+degrees of freedom. See, e.g.,~\citet{qin1994empirical} for proof and the
+treatment of more general cases, including the over-identified ones. For a level
+\({\alpha} \in {(0, 1)}\), let \({\chi^2_{p, \alpha}}\) be the
+\({100 (1 - \alpha)\%}\)th percentile of \({\chi^2_p}\). Since
+\({P(l(\theta_0) \leq \chi^2_{p, \alpha})} \to {1 - \alpha}\), an asymptotic
+\({100 (1 - \alpha)\%}\) confidence region for \({\theta}\) can be obtained as
 %
 \begin{equation}\label{eq:cr}
 \left\{\theta : l(\theta) \leq \chi^2_{p, \alpha}\right\}.
 \end{equation}
 %
 Often the chi-square calibration is unsatisfactory due to slow convergence,
-especially when \({n}\) is small.
-We review other calibration methods that address this issue.
-First, consider EL for the mean with \({g(X_i, \theta)} = {X_i - \theta}\) and
-\({\theta_0} = {\E[X_i]}\).
-The MELE is the sample average \({\bar{X}}\) since \({\sum_{i = 1}^n (X_i -
-\bar{X})} = {0}\).
-It can be shown that \({l(\theta_0)} = {n(\bar{X} - \theta_0)^\top V^{-1}
+especially when \({n}\) is small. We review other calibration methods that
+address this issue. First, consider EL for the mean with
+\({g(X_i, \theta)} = {X_i - \theta}\) and \({\theta_0} = {\E[X_i]}\). The MELE
+is the sample average \({\bar{X}}\) since
+\({\sum_{i = 1}^n (X_i - \bar{X})} = {0}\). It can be shown that
+\({l(\theta_0)} = {n(\bar{X} - \theta_0)^\top V^{-1}
 (\bar{X} - \theta_0)} + {o_P(1)}\),
 where \({V} = {n^{-1}\sum_{i = 1}^n (X_i - \theta_0) (X_i - \theta_0)^\top}\).
 Let \({S} = {(n - 1)^{-1}\sum_{i = 1}^n (X_i - \bar{X}) (X_i - \bar{X})^\top}\)
 and define a Hotelling's \(T\) squared statistic as \({T^2} = {n(\bar{X} -
-\theta_0)^\top S^{-1} (\bar{X} - \theta_0)}\).
-It follows that
+\theta_0)^\top S^{-1} (\bar{X} - \theta_0)}\). It follows that
 %
 \begin{equation*}
 {n(\bar{X} - \theta_0)^\top V^{-1} (\bar{X} - \theta_0)} = {n T^2 / (T^2 + n -
@@ -332,63 +317,54 @@ It follows that
 %
 This suggests that we can use \(p (n - 1) F_{p, n - p, \alpha} / (n - p)\) in
 place of \({\chi^2_{p, \alpha}}\), where \({F_{p, n - p}}\) is a \({F}\)
-distribution with \({p}\) and \({n - p}\) degrees of freedom.
-The \({F}\) calibration yields a larger critical value than the chi-square
-calibration, which leads to a better coverage probability of the confidence
-region in Equation~\ref{eq:cr}.
-Next, a more generally applicable calibration method is the Bartlett correction.
-Based on the Edgeworth expansion, it requires Cram\'er's condition and the
-existence of finite higher moments of \({g(X_i, \theta)}\).
-The correction is given by a scale multiple of \({\chi^2_{p, \alpha}}\) as \({(1
-+ a / n) \chi^2_{p, \alpha}}\) with an unknown constant \({a}\).
-In practice, the Bartlett correction involves getting a consistent estimate
-\({\hat{a}}\) with plug-in sample moments.
-The coverage error of the Bartlett corrected confidence region is reduced from
+distribution with \({p}\) and \({n - p}\) degrees of freedom. The \({F}\)
+calibration yields a larger critical value than the chi-square calibration,
+which leads to a better coverage probability of the confidence region in
+Equation~\ref{eq:cr}. Next, a more generally applicable calibration method is
+the Bartlett correction. Based on the Edgeworth expansion, it requires
+Cram\'er's condition and the existence of finite higher moments of
+\({g(X_i, \theta)}\). The correction is given by a scale multiple of
+\({\chi^2_{p, \alpha}}\) as \({(1 + a / n) \chi^2_{p, \alpha}}\) with an unknown
+constant \({a}\). In practice, the Bartlett correction involves getting a
+consistent estimate \({\hat{a}}\) with plug-in sample moments. The coverage
+error of the Bartlett corrected confidence region is reduced from
 \({O(n^{-1})}\) to \({O(n^{-2})}\) \citep{diciccio1991empirical}, which is
-unattainable by the \({F}\) calibration.
-Another effective calibration method is the bootstrap.
-Let \({\widetilde{\mathcal{X}}_n} = {\{\widetilde{X}_1, \dots,
+unattainable by the \({F}\) calibration. Another effective calibration method is
+the bootstrap. Let \({\widetilde{\mathcal{X}}_n} = {\{\widetilde{X}_1, \dots,
 \widetilde{X}_n\}}\) denote the null-transformed data such that
 \({\E_{P_n}[g(\widetilde{X}_i, \theta)]} = {n^{-1}\sum_{i = 1}^n
-g(\widetilde{X}_i, \theta)} = {0}\),
-so Equation~\ref{eq:moment} holds for \({\widetilde{\mathcal{X}}_n}\) with
-\({P_n}\).
-Define a bootstrap sample \({\widetilde{\mathcal{X}}_n^*} =
+g(\widetilde{X}_i, \theta)} = {0}\), so Equation~\ref{eq:moment} holds for
+\({\widetilde{\mathcal{X}}_n}\) with \({P_n}\). Define a bootstrap sample
+\({\widetilde{\mathcal{X}}_n^*} =
 {\{\widetilde{X}_1^*, \dots, \widetilde{X}_n^*\}}\) as i.i.d.~observations from
-\({\widetilde{\mathcal{X}}_n}\).
-We can compute the bootstrap EL ratio \({l^*(\theta)}\) with
-\({\widetilde{\mathcal{X}}_n^*}\) in the same way as before.
-The critical value, the \({100 (1 - \alpha)\%}\)th percentile of the
+\({\widetilde{\mathcal{X}}_n}\). We can compute the bootstrap EL ratio
+\({l^*(\theta)}\) with \({\widetilde{\mathcal{X}}_n^*}\) in the same way as
+before. The critical value, the \({100 (1 - \alpha)\%}\)th percentile of the
 distribution of \({l^*(\theta)}\), can be approximated using a large number, say
-\({B}\), of bootstrap samples.
-As an example, we may set \({\widetilde{X}_i} = {X_i - \bar{X} + \theta}\) when
-\({g(X_i, \theta)} = {X_i - \theta}\).
-This is equivalent to computing \({l^*(\bar{X})}\) with a bootstrap sample from
-the observed data directly.
-The \({O(n^{-2})}\) coverage error can also be achieved by the bootstrap
-calibration \citep{hall1990methodology}.
+\({B}\), of bootstrap samples. As an example, we may set
+\({\widetilde{X}_i} = {X_i - \bar{X} + \theta}\) when
+\({g(X_i, \theta)} = {X_i - \theta}\). This is equivalent to computing
+\({l^*(\bar{X})}\) with a bootstrap sample from the observed data directly. The
+\({O(n^{-2})}\) coverage error can also be achieved by the bootstrap calibration
+\citep{hall1990methodology}.
 
 Although EL does not require full model specification, it is not entirely free
-of misspecification concerns.
-Developing diagnostic measures for EL is still an open problem, and we briefly
-introduce the technique of empirical likelihood displacement
-\citep[ELD,][]{lazar2005assessing}.
-Much like the concept of likelihood displacement \citep{cook1986assessment}, ELD
-can be used to detect influential observations or outliers.
-With the MELE \({\hat{\theta}}\) from the complete data, consider reduced data
-with the \({i}\)th observation deleted and the corresponding MELE estimate
-\({\hat{\theta}_{(i)}}\),
-Then ELD is defined as
+of misspecification concerns. Developing diagnostic measures for EL is still an
+open problem, and we briefly introduce the technique of empirical likelihood
+displacement \citep[ELD,][]{lazar2005assessing}. Much like the concept of
+likelihood displacement \citep{cook1986assessment}, ELD can be used to detect
+influential observations or outliers. With the MELE \({\hat{\theta}}\) from the
+complete data, consider reduced data with the \({i}\)th observation deleted and
+the corresponding MELE estimate \({\hat{\theta}_{(i)}}\), Then ELD is defined as
 %
 \begin{equation}\label{eq:eld}
 \textnormal{ELD}_i = 2\left(L(\hat{\theta}) - L(\hat{\theta}_{(i)})\right),
 \end{equation}
 %
 where \({\hat{\theta}_{(i)}}\) is plugged into the original EL function
-\({L(\theta)}\).
-If \({\textnormal{ELD}_i}\) is large, the \({i}\)th observation is an
-influential point and can be inspected as a possible outlier.
-See \citet{zhu2008diagnostic} for other diagnostic measures for EL.
+\({L(\theta)}\). If \({\textnormal{ELD}_i}\) is large, the \({i}\)th observation
+is an influential point and can be inspected as a possible outlier. See
+\citet{zhu2008diagnostic} for other diagnostic measures for EL.
 
 
 \subsection{Empirical likelihood for linear models}\label{sec:2.2}
@@ -1354,7 +1330,7 @@ defoliation significantly reduces the number of visits.
 \begin{figure}[t!]
 \centering
 <<ridgeline-plot, echo=FALSE, fig.width=7, fig.height=5>>=
-library(ggridges)
+library("ggridges")
 ggplot(thiamethoxam, aes(
   x = visit, y = trt, fill = var, linetype = var, color = var
 )) +
